<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All rights reserved.
  -->
<resources>
    <!--  General  -->
    <string name="app_name">Phenix Groups</string>

    <!--  Call Settings screen  -->
    <string name="show_join_room_button_label">Meeting Code</string>
    <string name="new_room_button_label">New Meeting</string>
    <string name="rejoin_room_button_label">Rejoin</string>
    <string name="preview_icon_content_description">Preview Icon</string>
    <string name="room_left_label">Left at %1$s</string>
    <string name="hint_enter_display_name">Enter display name</string>
    <string name="hint_display_name">Display name</string>

    <!--  Room call screen  -->
    <string name="tab_members_count"> (%1$d)</string>
    <string name="tab_message_count">99+</string>
    <string name="menu_switch_camera">Switch camera</string>
    <string name="menu_cancel">Cancel</string>

    <!-- Members list  -->
    <string name="preview_mic_off_icon_content_description">Microphone is off</string>
    <string name="preview_volume_icon_content_description">Audio volume</string>

    <!-- Info fragment -->
    <string name="info_share">Share</string>
    <string name="info_meeting_subject">Meeting URL</string>
    <string name="info_meeting_url">Meeting URL: https://phenixrts.com/group/#%1$s</string>

    <!--  Chat  -->
    <string name="group_call_chat_message_hint">Message</string>
    <string name="group_call_chat_send_button_content_description">Send Button</string>
    <string name="group_call_chat_self">You</string>
    <string name="chat_time_now">Now</string>
    <string name="chat_time_min">1 min</string>
    <string name="chat_time_mins">%1$s mins</string>
    <string name="chat_time_hour">1 hour</string>
    <string name="chat_time_hours">%1$s hours</string>
    <string name="chat_time_day">1 day</string>
    <string name="chat_time_days">%1$s days</string>
    <string name="chat_time_month">1 month</string>
    <string name="chat_time_months">%1$s months</string>
    <string name="chat_time_year">1 year</string>
    <string name="chat_time_years">%1$s years</string>

    <!-- Errors -->
    <string name="err_chat_message_failed">Failed to send chat message: %1$s</string>
    <string name="err_create_room_failed">Failed to create new meeting</string>
    <string name="err_join_room_failed">Failed to join meeting</string>
    <string name="err_camera_lost">Phenix Groups has lost access to camera</string>
    <string name="err_microphone_lost">Phenix Groups has lost access to microphone</string>
    <string name="err_network_problems">Experiencing problems connecting to Phenix. Check your network status.</string>
    <string name="err_enter_valid_room_code">Please enter a valid room code</string>
    <string name="err_failed_to_collect_logs">Failed to collect application logs</string>
    <string name="err_configuration_changed">Configuration has changed. Please start the app again to apply the changes.</string>
    <string name="err_room_express_not_initialized">Room Express is not initialized</string>
    <string name="err_user_media_not_initialized">User Media is not initialized</string>

    <!-- Join Meeting -->
    <string name="join_room_button_label">Join meeting</string>
    <string name="hint_room_code">Meeting code</string>
    <string name="hint_enter_a_meeting_code">Enter a meeting code</string>
    <string name="meeting_code">Meeting code:</string>

    <!-- Accessibility descriptions -->
    <string name="accessibility_members_tab">Members Tab</string>
    <string name="accessibility_chat_tab">Chat Tab</string>
    <string name="accessibility_info_tab">Info Tab</string>
    <string name="accessibility_menu_button">Menu Button</string>

    <!-- Debug menu -->
    <string name="debug_about">About</string>
    <string name="debug_app_version">App version: %1$s build: %2$d</string>
    <string name="debug_sdk_version">SDK version: %1$s build: %2$d</string>
    <string name="debug_share_app_logs">Share App logs</string>
    <string name="debug_close">Close</string>
    <string name="popup_ok">OK</string>

</resources>
